--- a/Section XVIII Forkify/package.json
+++ b/Section XVIII Forkify/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.2",
     "parcel": "^2.6.2"
+  },
+  "dependencies": {
+    "core-js": "^3.23.2",
+    "regenerator-runtime": "^0.13.9"
   }
 }
